Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://deanshandymanservice.me/">
     <meta property="og:title" content="Dean's Rural Handyman & Starlink - We Travel to You">
     <meta property="og:description" content="Serving the small towns of Texas, Oklahoma, Arkansas, and Louisiana. Reliable, personal service.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1581092160607-ee22621dd758?auto=format&fit=crop&w=1200&q=80">
+    <meta property="og:image" content="https://i.postimg.cc/4NzfWL81/20251230-113812.jpg">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
@@ -277,27 +277,27 @@
                 
                 <div class="work-card" data-aos="fade-up">
                     <div class="work-img-container">
-                        <img src="https://images.unsplash.com/photo-1581092160607-ee22621dd758?auto=format&fit=crop&w=800&q=80" alt="Professional Starlink Roof Mount">
+                        <img src="https://i.postimg.cc/4NzfWL81/20251230-113812.jpg" alt="Professional Starlink Roof Mount">
                     </div>
                     <div class="work-details">
                         <div class="work-title">Ridge Mount & Drip Loop</div>
-                        <div class="work-desc">Zero-leak roof penetration using industrial flashing.</div>
+                        <div class="work-desc">Zero-leak roof penetration using industrial flashing. Clean "drip loop" prevents water entry.</div>
                     </div>
                 </div>
 
                 <div class="work-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="work-img-container">
-                        <img src="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?auto=format&fit=crop&w=800&q=80" alt="Custom Metal Fabrication">
+                        <img src="https://i.postimg.cc/66Pt6sS5/20251027-120044.jpg" alt="Custom Metal Fabrication">
                     </div>
                     <div class="work-details">
                         <div class="work-title">Custom Fabrication</div>
-                        <div class="work-desc">We fabricate custom brackets and mounting solutions.</div>
+                        <div class="work-desc">We fabricate custom brackets and mounting solutions for shops, barndominiums, and off-grid setups.</div>
                     </div>
                 </div>
 
                 <div class="work-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="work-img-container">
-                        <img src="https://images.unsplash.com/photo-1558402529-d2638a7023e9?auto=format&fit=crop&w=800&q=80" alt="Electrical Panel Work">
+                        <img src="https://i.postimg.cc/MZnXmY2s/20251208-114718.jpg" alt="Electrical Panel Work">
                     </div>
                     <div class="work-details">
                         <div class="work-title">Electrical & Code Compliance</div>
@@ -307,11 +307,11 @@
 
                 <div class="work-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="work-img-container">
-                        <img src="https://images.unsplash.com/photo-1605218427306-0220221af52d?auto=format&fit=crop&w=800&q=80" alt="Mobile Handyman Unit">
+                        <img src="https://i.postimg.cc/y8LzGw0h/20250730-170809.jpg" alt="Mobile Handyman Unit">
                     </div>
                     <div class="work-details">
                         <div class="work-title">Mobile Industrial Unit</div>
-                        <div class="work-desc">Fully self-sufficient with power, welders, and heavy tools on board.</div>
+                        <div class="work-desc">We arrive fully self-sufficient with power, welders, and heavy tools on board.</div>
                     </div>
                 </div>
             </div>
