--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Dean's Handyman Service | Handyman Pittsburg TX</title>
+    <title>Contact & Pay | Dean's Handyman Service Pittsburg TX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contact Us for Home Repairs in Pittsburg, TX</h1>
-    <p><strong>Phone:</strong> 281-917-9914</p>
-    <p><strong>Service Area:</strong> Pittsburg, Texas.</p>
-    <h2>Pay an Invoice</h2>
-    <a href="https://square.link/u/dO7MQ0kc" style="padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Pay Securely via Square</a>
+    <header><h1>Contact & Secure Payments</h1></header>
+    <nav>
+        <a href="index.html">Home</a> <a href="about.html">About</a> <a href="faqs.html">FAQs</a> <a href="reviews.html">Reviews</a> <a href="contact.html">Pay/Contact</a>
+    </nav>
+    <div class="container" style="text-align:center;">
+        <h2>Need a Repair?</h2>
+        <p class="phone">Call or Text: 281-917-9914</p>
+        <p>Serving Pittsburg, Texas and the surrounding area.</p>
+        <hr>
+        <h2>Secure Online Payment</h2>
+        <p>Ready to settle your invoice? Use our secure Square link below:</p>
+        <a href="https://square.link/u/dO7MQ0kc" class="btn-pay">Pay Invoice via Square</a>
+        <p><small>All major credit cards accepted.</small></p>
+    </div>
 </body>
 </html>
