--- a/faqs.html
+++ b/faqs.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Handyman FAQs | Home Repair Questions Pittsburg TX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Frequently Asked Questions</h1>
-    <h3>What services do you provide?</h3>
-    <p>We offer electrical repairs, carpentry, Starlink installation, and general home maintenance in Pittsburg, TX.</p>
-    <h3>How do I get a quote?</h3>
-    <p>The fastest way is to call us directly at 281-917-9914.</p>
+    <header><h1>Frequently Asked Questions</h1></header>
+    <nav>
+        <a href="index.html">Home</a> <a href="about.html">About</a> <a href="faqs.html">FAQs</a> <a href="reviews.html">Reviews</a> <a href="blog.html">Blog</a> <a href="contact.html">Pay/Contact</a>
+    </nav>
+    <div class="container">
+        <div style="margin-bottom: 25px;">
+            <h3 style="color: #ff6600;">What areas do you serve?</h3>
+            <p>We are based in Pittsburg, TX, and serve the surrounding communities throughout East Texas.</p>
+        </div>
+        <div style="margin-bottom: 25px;">
+            <h3 style="color: #ff6600;">Do you handle specialized Starlink mounting?</h3>
+            <p>Yes. We specialize in custom roof/pole mounts and professional cable routing to ensure peak performance in rural areas.</p>
+        </div>
+        <div style="margin-bottom: 25px;">
+            <h3 style="color: #ff6600;">How can I pay my invoice?</h3>
+            <p>You can pay securely online via our <a href="contact.html">Payment page</a> using your major credit card through Square.</p>
+        </div>
+        <div style="margin-bottom: 25px;">
+            <h3 style="color: #ff6600;">Do you provide free estimates?</h3>
+            <p>The fastest way to get a quote is to call or text us directly at 281-917-9914 with a description of your project.</p>
+        </div>
+    </div>
+    <footer>&copy; 2026 Deans Handyman Service LLC - Pittsburg, TX</footer>
 </body>
 </html>
