--- a/about.html
+++ b/about.html
@@ -1,35 +1,45 @@
-<!DOCTYPE html>
+<!DOCTYPE html-US>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Dean's Handyman Service | Expert Builder Pittsburg TX</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | Dean's Handyman Service LLC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Deans Handyman Service LLC</h1></header>
-    <nav>
-        <a href="index.html">Home</a> <a href="about.html">About</a> <a href="faqs.html">FAQs</a> <a href="reviews.html">Reviews</a> <a href="blog.html">Blog</a> <a href="contact.html">Pay/Contact</a>
-    </nav>
-    <div class="container">
-        <h2>Expertise You Can Count On</h2>
-        <p>Dean's Handyman Service LLC provides high-level technical expertise for home repairs in Pittsburg, Texas. Our owner is a seasoned professional with a deep background in multiple industrial and construction trades.</p>
-        
-        <div style="display: flex; gap: 20px; flex-wrap: wrap; margin-top: 20px;">
-            <div style="flex: 1; min-width: 300px;">
-                <h3>Our Specialized Skills</h3>
-                <ul style="line-height: 2;">
-                    <li><strong>Electrical & Networking:</strong> Wiring repairs and expert Starlink/Wi-Fi optimization.</li>
-                    <li><strong>Carpentry & Fabrication:</strong> Custom builds, structural repairs, and metal work.</li>
-                    <li><strong>Mechanical & Industrial:</strong> Expertise in hydraulics, machining, and pipefitting.</li>
-                </ul>
-            </div>
-            <div style="flex: 1; min-width: 300px;">
-                <h3>The Local Advantage</h3>
-                <p>As a Pittsburg local, we understand East Texas properties—from weather-proofing to rural internet challenges. We are dedicated to quality, reliable work that lasts.</p>
-            </div>
+    <header>
+        <div class="container nav-container">
+            <a href="index.html" class="logo-wrapper">
+                <img src="https://i.postimg.cc/qvsGMT1Z/IMG-20240820-102606-912.jpg" class="logo-img">
+                <div class="logo-text">Dean's<br><span>Handyman Service LLC</span></div>
+            </a>
+            <nav class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="faqs.html">FAQs</a>
+                <a href="reviews.html">Reviews</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html" class="nav-pay-btn">Pay/Contact</a>
+            </nav>
         </div>
-        <p class="phone" style="text-align:center; margin-top:30px;">Call for an Estimate: 281-917-9914</p>
+    </header>
+
+    <section class="hero" style="padding: 60px 0;">
+        <div class="container">
+            <h1>Expertise You Can Trust</h1>
+            <p class="hero-sub">Industrial-grade skill for your home, ranch, and business in Pittsburg, TX.</p>
+        </div>
+    </section>
+
+    <div class="container section">
+        <h2>Professional Background</h2>
+        <p>Dean's Handyman Service LLC is built on professional trades, including electrical, hydraulics, and custom fabrication. We specialize in high-tech home integration and "white-glove" Starlink installations.</p>
     </div>
-    <footer>&copy; 2026 Deans Handyman Service LLC - Pittsburg, TX</footer>
+
+    <footer>
+        <div class="container">
+            <p>© 2026 Dean's Handyman Service LLC. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
