--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html-US>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact & Pay | Dean's Handyman Service Pittsburg TX</title>
+    <title>Contact & Pay | Dean's Handyman Service LLC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Contact & Secure Payments</h1></header>
-    <nav>
-        <a href="index.html">Home</a> <a href="about.html">About</a> <a href="faqs.html">FAQs</a> <a href="reviews.html">Reviews</a> <a href="contact.html">Pay/Contact</a>
-    </nav>
-    <div class="container" style="text-align:center;">
-        <h2>Need a Repair?</h2>
+    <header>
+        </header>
+
+    <div class="container section" style="text-align: center;">
+        <h2>Get in Touch</h2>
         <p class="phone">Call or Text: 281-917-9914</p>
-        <p>Serving Pittsburg, Texas and the surrounding area.</p>
-        <hr>
+        <hr style="margin: 40px 0;">
         <h2>Secure Online Payment</h2>
-        <p>Ready to settle your invoice? Use our secure Square link below:</p>
-        <a href="https://square.link/u/dO7MQ0kc" class="btn-pay">Pay Invoice via Square</a>
-        <p><small>All major credit cards accepted.</small></p>
+        <a href="https://square.link/u/dO7MQ0kc" target="_blank" class="btn btn-square">Pay via Square (Credit Card)</a>
+        <a href="https://venmo.com/u/DeanshandymanserviceLLC" target="_blank" class="btn btn-venmo">Pay via Venmo</a>
     </div>
+
+    <footer>
+        </footer>
 </body>
 </html>
