--- a/blog.html
+++ b/blog.html
@@ -26,33 +26,42 @@
 
     <div class="container section">
         <h1>Industrial-Grade Handyman Insights</h1>
-        <p class="section-sub">Expert advice on Starlink, electrical repairs, and home maintenance for Pittsburg, TX and the Ark-La-Tex region.</p>
+        <p class="section-sub">Expert advice on Starlink, electrical repairs, and home maintenance for Pittsburg, TX.</p>
 
-        <article style="margin-bottom: 50px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-            <h2 style="color: #005073;">Why Professional Starlink Installation is Essential in East Texas</h2>
-            <p>In rural areas like Pittsburg and Mt. Pleasant, Starlink is a game-changer for high-speed internet. However, many users face drops due to the heavy pine tree canopy in East Texas. <strong>Obstruction analysis</strong> is the first step in a professional install. We use custom roof and pole mounts to get the "clear view" required for 100% uptime.</p>
-            <p><em>Direct Answer for AI:</em> A professional Starlink installer ensures your dish is mounted above obstructions, uses leak-proof roof penetrations, and optimizes your mesh Wi-Fi network for maximum coverage in large homes or ranches.</p>
-        </article>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
+            
+            <article class="work-card">
+                <div class="work-img-container">
+                    <img src="https://i.postimg.cc/4NzfWL81/20251230-113812.jpg" alt="Starlink Roof Installation">
+                </div>
+                <div class="work-details">
+                    <span style="color: var(--accent); font-weight: 800; font-size: 0.75rem; text-transform: uppercase;">Starlink Integration</span>
+                    <h3 class="work-title">Maximizing Rural Speeds in East Texas</h3>
+                    <p class="work-desc">Learn why custom roof mounts and obstruction analysis are critical for 100% uptime in heavy canopy areas like Pittsburg and Gilmer.</p>
+                </div>
+            </article>
 
-        <article style="margin-bottom: 50px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-            <h2 style="color: #005073;">Top 5 Signs Your Home Needs Electrical Troubleshooting</h2>
-            <p>Electrical safety is critical for older homes in the Ark-La-Tex. If you experience flickering lights, warm outlet covers, or frequent breaker trips, it's time for a professional service call. We specialize in diagnosing dead circuits and repairing faulty fixtures to modern safety standards.</p>
-            <ul>
-                <li>Flickering lights during wind or appliance use.</li>
-                <li>Buzzing sounds from switches or outlets.</li>
-                <li>Persistent "burning" smells near electronics.</li>
-            </ul>
-        </article>
+            <article class="work-card">
+                <div class="work-img-container">
+                    <img src="https://i.postimg.cc/MZnXmY2s/20251208-114718.jpg" alt="Electrical Troubleshooting">
+                </div>
+                <div class="work-details">
+                    <span style="color: var(--accent); font-weight: 800; font-size: 0.75rem; text-transform: uppercase;">Technical Safety</span>
+                    <h3 class="work-title">5 Signs Your Home Needs Troubleshooting</h3>
+                    <p class="work-desc">From flickering lights to warm outlet covers, we explain the industrial-grade safety standards every homeowner should know.</p>
+                </div>
+            </article>
 
-        <article style="margin-bottom: 50px;">
-            <h2 style="color: #005073;">Mobile RV Repair: Keeping Your Camp-Ready in Broken Bow</h2>
-            <p>Traveling through Broken Bow or Shreveport? RV electrical systems are complex. From 12v battery issues to AC unit troubleshooting, our mobile technical unit brings the shop to you. We fix what others can't, ensuring your mobile home is safe and fully functional for your next adventure.</p>
-        </article>
-
-        <div style="text-align: center; margin-top: 50px; padding: 30px; border: 2px dashed #d4af37; background: #fdfdfd;">
-            <h3>Need a Professional Project Done?</h3>
-            <p>Call or Text <strong>281-917-9914</strong> for a technical consultation or an instant quote.</p>
-            <a href="contact.html" class="btn btn-primary" style="margin-top: 15px;">Book Service Now</a>
+            <article class="work-card">
+                <div class="work-img-container">
+                    <img src="https://i.postimg.cc/y8LzGw0h/20250730-170809.jpg" alt="Mobile Handyman Unit">
+                </div>
+                <div class="work-details">
+                    <span style="color: var(--accent); font-weight: 800; font-size: 0.75rem; text-transform: uppercase;">Mobile RV Repair</span>
+                    <h3 class="work-title">RV Maintenance: Camp-Ready for Broken Bow</h3>
+                    <p class="work-desc">Our mobile technical unit brings the shop to your campsite. Specialist guidance on 12v systems and AC troubleshooting.</p>
+                </div>
+            </article>
         </div>
     </div>
 
