--- a/index.html
+++ b/index.html
@@ -10,7 +10,111 @@
     <meta name="author" content="Dean's Handyman Service LLC">
     
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <meta name="googlebot" content="index, follow"><!DOCTYPE html>
+    <meta name="googlebot" content="index, follow"><!DOCTYPE html><!DOCTYPE html>
+    <html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>Dean's Handyman Service LLC | Starlink & Tech Specialist | Pittsburg, TX</title>
+        <meta name="description" content="Dean's Handyman Service LLC. Premier Starlink Installation, Electrical Repair, RV Tech, and Carpentry. Serving Pittsburg, Mt Pleasant, Broken Bow & Shreveport.">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <style>
+            :root { --primary: #005073; --primary-dark: #003a54; --accent: #d4af37; --light: #f8fafc; --white: #ffffff; --dark: #1e293b; --venmo: #008CFF; }
+            * { box-sizing: border-box; margin: 0; padding: 0; }
+            body { font-family: 'Segoe UI', system-ui, -apple-system, sans-serif; line-height: 1.6; color: var(--dark); background: var(--light); }
+            header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05); position: sticky; top: 0; z-index: 1000; height: 80px; display: flex; align-items: center; }
+            .nav-container { display: flex; justify-content: space-between; align-items: center; width: 100%; max-width: 1200px; margin: 0 auto; padding: 0 20px; }
+            .logo { font-weight: 900; font-size: 1.3rem; color: var(--primary-dark); line-height: 1; text-transform: uppercase; }
+            .logo span { color: var(--accent); display: block; font-size: 0.7rem; letter-spacing: 2px; margin-top: 3px; }
+            .nav-links { display: flex; align-items: center; gap: 20px; }
+            .nav-links a { font-weight: 700; font-size: 0.85rem; text-transform: uppercase; color: var(--primary-dark); }
+            .btn { padding: 12px 24px; border-radius: 6px; font-weight: 700; text-transform: uppercase; font-size: 0.85rem; border: none; cursor: pointer; display: inline-block; text-align: center; }
+            .btn-primary { background: var(--primary); color: white !important; }
+            .hero { background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: white; padding: 80px 0; position: relative; overflow: hidden; }
+            .hero h1 { font-size: 3rem; margin-bottom: 20px; line-height: 1.1; }
+            .estimator-wrapper { background: white; border-radius: 12px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2); overflow: hidden; border: 1px solid rgba(0, 0, 0, 0.05); color: var(--dark); }
+            .est-tabs { display: flex; background: #f1f5f9; }
+            .est-tab { flex: 1; padding: 15px; border: none; background: transparent; font-weight: 700; color: #64748b; cursor: pointer; }
+            .est-tab.active { background: white; color: var(--primary); box-shadow: 0 -2px 0 var(--accent) inset; }
+            .est-content { padding: 25px; }
+            .qty-row { display: flex; justify-content: space-between; align-items: center; padding: 12px 10px; border-bottom: 1px solid #f1f5f9; }
+            .qty-input { width: 60px; text-align: center; padding: 6px; border: 1px solid #cbd5e1; border-radius: 4px; font-weight: bold; }
+            .result-box { background: #f0fdf4; border: 1px solid #bbf7d0; border-radius: 8px; padding: 20px; text-align: center; margin-top: 20px; display: none; }
+            .total-price { font-size: 2.5rem; font-weight: 800; color: #15803d; margin: 10px 0; }
+            footer { background: #0f172a; color: #94a3b8; padding: 60px 0; text-align: center; }
+            @media (max-width: 900px) { .nav-links { display: none; } .hero h1 { font-size: 2.2rem; } }
+        </style>
+    </head>
+    <body>
+        <header>
+            <div class="nav-container">
+                <a href="index.html" class="logo">Dean's <span>Handyman Service LLC</span></a>
+                <nav class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="services.html">Services</a>
+                    <a href="areas.html">Service Area</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="reviews.html">Reviews</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                </nav>
+            </div>
+        </header>
+        <section class="hero">
+            <div class="container" style="display:flex; flex-wrap:wrap; align-items:center; gap:50px;">
+                <div style="flex:1; min-width:300px;">
+                    <h1>Industrial-Grade Service for <br> Homes & Ranches</h1>
+                    <p>The Ark-La-Tex's specialist for Starlink, electrical repair, and technical maintenance. Serving Pittsburg, Mt. Pleasant, Broken Bow & beyond.</p>
+                </div>
+                <div class="estimator-wrapper" id="estimator" style="flex:1; min-width:300px;">
+                    <div class="est-tabs">
+                        <button class="est-tab active" onclick="switchTab('calc')">Step 1: Estimate</button>
+                        <button class="est-tab" onclick="switchTab('send')">Step 2: Book</button>
+                    </div>
+                    <div class="est-content">
+                        <div id="view-calc">
+                            <div class="qty-row"><span>Residential Starlink</span><input type="number" min="0" class="qty-input" data-price="300" data-name="Res Starlink"></div>
+                            <div class="qty-row"><span>Ceiling Fan Install</span><input type="number" min="0" class="qty-input" data-price="175" data-name="Ceiling Fan"></div>
+                            <div class="qty-row"><span>TV Mounting</span><input type="number" min="0" class="qty-input" data-price="125" data-name="TV Mount"></div>
+                            <div style="margin-top:15px;"><label>Miles from 75686:</label><input type="number" id="trip-miles" placeholder="0" style="width:100%; padding:8px;"></div>
+                            <button onclick="calculateTotal()" class="btn btn-primary" style="width:100%; margin-top:15px;">Calculate Price</button>
+                            <div id="result-area" class="result-box">
+                                <div id="final-price" class="total-price">$0.00</div>
+                                <button onclick="switchTab('send')" class="btn" style="background:var(--accent); color:white; width:100%;">Proceed to Booking</button>
+                            </div>
+                        </div>
+                        <div id="view-send" style="display:none;">
+                            <input type="text" id="c-name" placeholder="Your Name" style="width:100%; padding:10px; margin-bottom:10px;">
+                            <div style="display:flex; gap:10px;">
+                                <button onclick="sendVia('email')" class="btn btn-primary" style="flex:1;">📧 Email Dean</button>
+                                <button onclick="sendVia('text')" class="btn" style="background:var(--accent); color:white; flex:1;">💬 Text Dean</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer><p>© 2026 Dean's Handyman Service LLC. All Rights Reserved.</p></footer>
+        <script>
+            function switchTab(t){ document.getElementById('view-calc').style.display=t==='calc'?'block':'none'; document.getElementById('view-send').style.display=t==='send'?'block':'none'; }
+            function calculateTotal(){
+                let total = 0;
+                document.querySelectorAll('.qty-input').forEach(i => { total += (parseInt(i.value)||0) * parseInt(i.dataset.price); });
+                const m = parseInt(document.getElementById('trip-miles').value)||0;
+                if(m > 100) total += (m-100)*1.5;
+                document.getElementById('final-price').innerText = "$" + total.toFixed(2);
+                document.getElementById('result-area').style.display = 'block';
+                window.lastTotal = total;
+            }
+            function sendVia(m){
+                const n = document.getElementById('c-name').value;
+                const msg = `Hi Dean, this is ${n}. I need a quote. Estimated total: $${window.lastTotal}`;
+                if(m==='email') window.location.href=`mailto:DeanshandymanserviceLLC@gmail.com?subject=Quote&body=${encodeURIComponent(msg)}`;
+                else window.location.href=`sms:2819179914?body=${encodeURIComponent(msg)}`;
+            }
+        </script>
+    </body>
+    </html>
     <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -1236,4 +1340,5 @@ Details: " + details);
     </script>
 </body>
 </html>
+
 
